--- a/css/screen.css
+++ b/css/screen.css
@@ -42,6 +42,12 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+@media (min-width: 768px) {
+    html{
+        font-size: 20px;
+        line-height: 1.6;
+    }
+}
 
 *,
 *:before,
@@ -197,13 +203,15 @@ a:focus {
 }
 
 @media (min-width: 768px) {
-    html{
-        font-size: 20px;
-        line-height: 1.6;
-    }
+    
     .o-row {
         padding-left: 48px;
         padding-right: 48px;
+    }
+
+    .o-row--md {
+        padding-top: 48px;
+        padding-bottom: 24px;
     }
 
     .o-row--lg {
@@ -222,7 +230,7 @@ a:focus {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 70.5; /* 90 * 16px = 1440px */
+    max-width: 56.4; /* 56.4 * 20px = 1228px */
 }
 
 /*
@@ -342,6 +350,47 @@ a:focus {
     align-content: space-between;
 }
 
+/*
+    Objects: List
+    ---
+    Small reusable object to remove default list styling from lists
+*/
+
+.o-list {
+    list-style: none;
+    padding: 0;
+}
+
+/*
+    Objects: section
+    ---
+    Creates vertical whitespace between adjacent sections inside a row
+*/
+
+.o-section {
+    display: flow-root;
+}
+
+.o-section + .o-section {
+    margin-top: 24px;
+}
+
+@media (min-width: 768px) {
+    .o-section--lg + .o-section--lg,
+    .o-section--xl + .o-section--xl {
+        margin-top: 48px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .o-section--xl + .o-section--xl {
+        margin-top: 72px;
+    }
+}
+
+
+
+
 /*------------------------------------*\
   #COMPONENTS
 \*------------------------------------*/
@@ -360,11 +409,94 @@ a:focus {
     height: 100%;
 }
 
+Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .c-logo {
         height: 40px;
     }
 }
+
+/*
+    Component: Nav
+    ---
+    Main navigation of the site
+*/
+
+.c-nav {
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.c-nav__link {
+    text-decoration: none;
+    font-weight: 400;
+    padding: 8px 0;
+    display: block;
+}
+
+.c-nav--meta{
+    font-size: 16px;
+}
+
+.c-nav__link,
+.c-nav__link:visited,
+.c-nav__link:active {
+    color: #202024;
+}
+
+.is-selected .c-nav__link,
+.c-nav__link:hover,
+.c-nav__link:focus {
+    color: #5051db;
+}
+
+.c-nav__link--meta,
+.c-nav__link--meta:visited,
+.c-nav__link--meta:active {
+    color: #6C6C75;
+}
+
+.c-nav__link--meta:hover,
+.c-nav__link--meta:focus {
+    color: #6051db;
+}
+
+@media (min-width: 768px) {
+    .c-nav__list {
+        display: flex;
+        gap: 24px;
+    }
+
+    .c-nav__link {
+    }
+} 
+
+/*
+    Component: header
+    ---
+    Main header of the website
+*/
+
+.c-header__nav {
+    display: none;
+}
+
+@media (min-width: 992px) {
+    .c-header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .c-header__nav {
+        display: block;
+    }
+
+    
+}
+
+
+
+
 
 
 /*------------------------------------*\
@@ -603,6 +735,17 @@ a:focus {
         flex-basis: calc(100% / 6 * 5) !important;
     }
 }
+
+/*
+    Utilities: spacing
+    ---
+    Utility classes to put specific margins and paddings onto elements
+*/
+
+.u-pt-clear {
+    padding-top: 0 !important; 
+}
+
 
 /*------------------------------------*\
   #MEDIA
